--- a/backend/package.json
+++ b/backend/package.json
@@ -10,31 +10,26 @@
     "format": "prettier --write ."
   },
   "eslintConfig": {
+    "root": true,
     "extends": [
       "plugin:adonis/typescriptApp",
       "prettier"
     ],
-    "plugins": [
-      "prettier"
-    ],
     "rules": {
-      "prettier/prettier": [
-        "error"
+      "complexity": [
+        "warn",
+        10
       ]
     }
   },
   "eslintIgnore": [
-    "build"
+    "build",
+    "node_modules",
+    "dist"
   ],
   "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": false,
-    "quoteProps": "consistent",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "printWidth": 100
+    "printWidth": 120,
+    "singleQuote": true
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.5",
@@ -46,7 +41,6 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.1",
-    "eslint-plugin-prettier": "^4.2.1",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.1",
     "typescript": "~4.6",
