--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,35 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "format": "prettier --write ."
   },
-  "dependencies": {
-    "pinia": "^2.0.28",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "eslint:recommended",
+      "plugin:vue/vue3-recommended",
+      "@vue/eslint-config-typescript",
+      "@vue/eslint-config-prettier"
+    ],
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    },
+    "rules": {
+      "complexity": [
+        "warn",
+        10
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "build",
+    "node_modules",
+    "dist"
+  ],
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -29,5 +52,10 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
+  },
+  "dependencies": {
+    "pinia": "^2.0.28",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   }
 }
