feat: add db pg

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,10 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=Yz0huk1UlthLLZR5g-8t7JbRRj7J-D5u
 DRIVE_DISK=local
+
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=fit-control
