--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "youch-terminal": "^2.1.5"
   },
   "dependencies": {
+    "@adonisjs/ally": "^4.1.5",
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.3.0",
