feat: add s3 driver

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,5 +10,12 @@ PG_PORT=5432
 PG_USER=lucid
 PG_PASSWORD=
 PG_DB_NAME=fit-control
+
+S3_KEY=dummyKey
+S3_SECRET=dummySecret
+S3_BUCKET=dummyBucket
+S3_REGION=dummyRegion
+S3_ENDPOINT=dummyEndpoint
+
 GOOGLE_CLIENT_ID=clientId
 GOOGLE_CLIENT_SECRET=clientSecret
