--- a/backend/.adonisrc.json
+++ b/backend/.adonisrc.json
@@ -14,7 +14,14 @@
     "Contracts": "contracts"
   },
   "preloads": ["./start/routes", "./start/kernel"],
-  "providers": ["./providers/AppProvider", "@adonisjs/core", "@adonisjs/lucid", "@adonisjs/auth", "@adonisjs/ally"],
+  "providers": [
+    "./providers/AppProvider",
+    "@adonisjs/core",
+    "@adonisjs/lucid",
+    "@adonisjs/auth",
+    "@adonisjs/ally",
+    "@adonisjs/drive-s3"
+  ],
   "aceProviders": ["@adonisjs/repl"],
   "tests": {
     "suites": [
