--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "@adonisjs/ally": "^4.1.5",
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/drive-s3": "^1.3.2",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.11",
     "luxon": "^3.1.1",
