--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,8 @@
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
       "@adonisjs/auth",
-      "@adonisjs/ally"
+      "@adonisjs/ally",
+      "@adonisjs/drive-s3"
     ]
   }
 }
