build: add multistage docker for adonis, pg and redis

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,15 +7,17 @@ DRIVE_DISK=local
 DB_CONNECTION=pg
 PG_HOST=localhost
 PG_PORT=5432
-PG_USER=lucid
+PG_USER=postgres
 PG_PASSWORD=
-PG_DB_NAME=fit-control
+PG_DB_NAME=fitcontrol
 
 S3_KEY=dummyKey
 S3_SECRET=dummySecret
 S3_BUCKET=dummyBucket
 S3_REGION=dummyRegion
 S3_ENDPOINT=dummyEndpoint
+
+REDIS_PORT=6379
 
 GOOGLE_CLIENT_ID=clientId
 GOOGLE_CLIENT_SECRET=clientSecret
