feat: add redis

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,7 +17,10 @@ S3_BUCKET=dummyBucket
 S3_REGION=dummyRegion
 S3_ENDPOINT=dummyEndpoint
 
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+REDIS_PASSWORD=
 
 GOOGLE_CLIENT_ID=clientId
 GOOGLE_CLIENT_SECRET=clientSecret
