--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/drive-s3": "^1.3.2",
     "@adonisjs/lucid": "^18.3.0",
+    "@adonisjs/redis": "^7.3.2",
     "@adonisjs/repl": "^3.1.11",
     "luxon": "^3.1.1",
     "pg": "^8.8.0",
